--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,7 +9,7 @@
     text-rendering: optimizeLegibility;
 }
 
-@media screen and (max-width: 320px) {
+@media all and (max-width: 320px) {
 
     .lead__title{
         font-size: 40px;
