--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,12 +9,11 @@
     text-rendering: optimizeLegibility;
 }
 
-@media all and (max-width: 320px) {
+@media screen and (max-width: 320px) {
 
     .lead__title{
-        font-size: 40px;
-        line-height: 1.1;
-        margin-bottom: 16px;
+        font-size: 32px;
+        line-height: 1.09;
     }
   
   }
