--- a/fonts.css
+++ b/fonts.css
@@ -1,5 +1,8 @@
-@import url('https://rsms.me/inter/inter.css');
-html { font-family: 'Inter', sans-serif; }
-@supports (font-variation-settings: normal) {
-  html { font-family: 'Inter var', sans-serif; }
-}
+@font-face {
+    font-family: 'Inter';
+    font-weight: 100 900;
+    font-style: normal;
+    src: url(./vendor/fonts/Inter.var.woff2);
+  }
+
+  
