--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,8 +1,9 @@
 .cover__background {
+background-image: url(../../../sprint-3-images/cover-trains.jpg);
+background-size: cover;
 position: absolute;
 top: 0px;
 margin: auto;
-object-fit: cover;
 width: 100%;
 height: 740px;
 z-index: 0;
