--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,13 +1,14 @@
 .cover__title {
     margin: 0;
+    position: relative;
+    display: flex;
+    margin: auto;
+    padding-top: 245px;
     color: white;
     font-size: 72px;
     line-height: 1.06;
     font-weight: 900;
-    position: relative;
     max-width: 560px;
-    margin: auto;
-    top: 245px;
     text-align: center;
     z-index: 2;
     pointer-events: none;
