--- a/blocks/photo-grid/__area/photo-grid__area.css
+++ b/blocks/photo-grid/__area/photo-grid__area.css
@@ -1,4 +1,4 @@
-.photo-grid {
+.photo-grid__area {
 list-style-type: none;
 margin: 0;
 padding: 0;
@@ -14,7 +14,7 @@ max-width: 1184px;
 
 @media screen and (max-width: 1024px) {
 
-    .photo-grid{
+    .photo-grid__area{
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 14px;
     }
@@ -23,7 +23,7 @@ max-width: 1184px;
 
 @media screen and (max-width: 768px) {
 
-    .photo-grid{
+    .photo-grid__area{
         grid-template-columns: repeat(2, 1fr);
         width: calc(100% - 48px);
     }
@@ -32,7 +32,7 @@ max-width: 1184px;
 
 @media screen and (max-width: 320px) {
 
-    .photo-grid{
+    .photo-grid__area{
         grid-template-columns: repeat(1, 1fr);
         width: calc(100% - 32px);
         grid-gap: 12px;
