--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -21,10 +21,11 @@
 
 }
 
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 650px) {
 
   .place__image {
     width: 100%;
+    height: 100%;
     margin-bottom: 32px;
   }
 
