--- a/pages/index.css
+++ b/pages/index.css
@@ -1,12 +1,12 @@
 @import url(../vendor/normalize.css);
-@import url(../fonts.css);
+@import url(../vendor/fonts.css);
 
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
-@import url(../blocks/header/__lang-link/_ru/header__lang-link_ru.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
 @import url(../blocks/header/__logo/header__logo.css);
 
 @import url(../blocks/lead/lead.css);
@@ -17,13 +17,13 @@
 
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list-section/intro__list-section.css);
+@import url(../blocks/intro/__list/_bold/intro__list_bold.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__title/intro__title.css);
 
-@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__area/photo-grid__area.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
-
-@import url(../blocks/places/places.css);
 
 @import url(../blocks/place/place.css);
 @import url(../blocks/place/__image/place__image.css);
