--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -3,7 +3,7 @@ background-image: url(../../../sprint-3-images/cover-trains.jpg);
 background-size: cover;
 position: absolute;
 top: 0px;
-margin: auto;
+left: 0px;
 width: 100%;
 height: 740px;
 z-index: 0;
