--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,7 +1,7 @@
 .cover__overlay {
     position: absolute;
     top: 0px;
-    margin: auto;
+    left: 0px;
     width: 100%;
     height: 100%;
     background-color: #2A2C2F;
