--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,11 +1,7 @@
 .cover__subtitle {
     margin: 0;
-    position: relative;
-    display: flex;
-    margin: auto;
     margin-top: 32px;
     color: white;
-    text-decoration: none;
     font-size: 18px;
     line-height: 1.22;
     max-width: 360px;
@@ -14,26 +10,11 @@
     pointer-events: none;
 }
 
-@media screen and (max-width: 1024px) {
-
-    .cover__subtitle {
-       top: 227px;
-    }
-  
-  }
-
-  @media screen and (max-width: 768px) {
-
-    .cover__subtitle {
-       top: 147px;
-    }
-  
-  }
 
   @media screen and (max-width: 414px) {
 
    .cover__subtitle {
-      top: 49px;
+      margin-top: 16px;
       font-size: 14px;
       line-height: 1.14;
       width: 288px;
