--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,8 @@
 .cover {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: calc(100% - 96px);
   max-width: 1184px;
   margin: auto;
